...
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/standart_item_background">

                <EditText
                    android:id="@+id/editText_Neue_Aufgabe_Putzplan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-black"
                    android:hint="Neue Aufgabe"
...
                    android:paddingBottom="10dp"
                    android:text="Abbrechen"
                    android:textSize="18sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button_putzplan_ändern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/standart_button_background"
...
