...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <ImageButton
                android:id="@+id/button_loeschen_vorratskammer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
