...
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_vorratskammer_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="450dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
...
