...
                            android:fontFamily="sans-serif"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/button_hinzufuegen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/standart_button_background"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/hinzufuegen"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/button_bearbeiten"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/standart_button_background"
                            android:fontFamily="sans-serif-black"
...
